[package]
name = "distrubutor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bytes = "1.7.2"
dashmap = "6.1.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
http = "1.1.0"
log = "0.4.22"
once_cell = "1.20.2"
pingora = { version = "0.3.0", features = ["lb", "proxy"] }
substring = "1.4.5"
tokio = "1.40.0"
